--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,19 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- Jpa -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<!--mysql-->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 		<!--Lombok-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
