--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,13 @@
 			<version>1.12.2</version>
 		</dependency>
 
+		<!-- LOG -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
