--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/export_db?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://103.125.216.56:3306/export_db?createDatabaseIfNotExist=true
+spring.datasource.username=sentura
+spring.datasource.password={*qp8j{J+w96[m_2
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.error.whitelabel.enabled=false
