--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,19 @@
 			<version>1.2.17</version>
 		</dependency>
 
+		<!--Model Mapper-->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.tika</groupId>
+			<artifactId>tika-parsers</artifactId>
+			<version>1.26</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
