--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/export_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=mysql
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
