--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,18 @@ server.port=8080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/export_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=admin
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 server.error.whitelabel.enabled=false
 
-
+server.url=http://103.125.216.56:8012
+server.upload.url=/var/www/html/export-service/uploads/
+server.upload.folder=swlc-data
+server.folder=swlc
+server.upload.assets.url=assets
 
 #Email Details
 mail.from=senturaproducttest@gmail.com
