--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,8 +2,8 @@
 # DEV SERVER PROPERTIES - DEV PROFILE
 # -------------------------------------------------------------------------------------------------------------------------
 
-server.url=http://localhost:8080
-server.upload.url=upload/
+server.url=http://103.125.216.56:8012
+server.upload.url=/opt/tomcat/webapps/upload/
 server.upload.folder=swlc-data
 server.folder=swlc
 server.upload.assets.url=assets
