--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://103.125.216.56:3306/export_db?createDatabaseIfNotExist=true
-spring.datasource.username=sentura
-spring.datasource.password={*qp8j{J+w96[m_2
+spring.datasource.url=jdbc:mysql://localhost:3306/export_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=admin
 #spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 server.error.whitelabel.enabled=false
 
-server.url=http://103.125.216.56:8012
-server.upload.url=/var/www/html/export-service/uploads/
+server.url=http://localhost:8080
+server.upload.url=/Users/Admin/Desktop/PERSONAL/Uploads/
 server.upload.folder=swlc-data
 server.upload.assets.url=assets
 
