--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-server.port=8080
+server.port=8012
 
-spring.datasource.url=jdbc:mysql://localhost:3306/export_db?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://13.229.209.138:3306/export_db?createDatabaseIfNotExist=true
+spring.datasource.username=swlc
+spring.datasource.password=SWLC@2021
 #spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 server.error.whitelabel.enabled=false
 
-server.url=http://localhost:8080
-server.upload.url=/Users/Admin/Desktop/PERSONAL/Uploads/
+server.url=http://13.229.209.138:8012
+server.upload.url=/var/export-service/uploads/
 server.upload.folder=swlc-data
 server.upload.assets.url=assets
 
