--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ mail.port=587
 mail.user=senturaproducttest@gmail.com
 mail.password=test12345$
 mail.adminUser=testmailvidu@gmail.com
+
+Dataentry.operator.mail = vidu996@gmail.com
