--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8012
 
 spring.datasource.url=jdbc:mysql://54.251.224.107:3306/export_db?createDatabaseIfNotExist=true
-spring.datasource.username=swlc
-spring.datasource.password=SWLC@2021
+spring.datasource.username=root
+spring.datasource.password=KpSCKsparsTesLa-m8_LPL
 #spring.jpa.show-sql=true
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/export_db?createDatabaseIfNotExist=true
