--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8012
 
 spring.datasource.url=jdbc:mysql://54.251.224.107:3306/export_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=KpSCKsparsTesLa-m8_LPL
+spring.datasource.password=ijse
 #spring.jpa.show-sql=true
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/export_db?createDatabaseIfNotExist=true
