--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,8 +1,14 @@
 # LOG4J configuration
-log4j.rootLogger=DEBUG, Appender1
+log4j.rootLogger=DEBUG, Appender2
 
 log4j.appender.Appender1=org.apache.log4j.ConsoleAppender
 log4j.appender.Appender1.layout=org.apache.log4j.PatternLayout
 log4j.appender.Appender1.layout.ConversionPattern=%-7p %d [%t] %c %x - %m%n
+
+
+log4j.appender.Appender2=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.Appender2.File=/data/logs/swlcexportmanagement.log
+log4j.appender.Appender2.layout=org.apache.log4j.PatternLayout
+log4j.appender.Appender2.layout.ConversionPattern=%-7p %d [%t] %c %x - %m%n
 
 spring.jpa.show-sql=false
